[tool.poetry]
name = "pyccwc"
version = "0.1.0"
description = ""
authors = ["Sebastian Rodriguez Colina <srcolinas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.6.1"
pytest = "^7.4.3"
ruff = "^0.1.3"
black = "^23.10.1"

[tool.poetry.scripts]
pyccwc = "pyccwc.main:_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true